gallery resize on mobile bug fix

--- a/app/less/all.less
+++ b/app/less/all.less
@@ -305,7 +305,6 @@
 	position: relative;
 
 	h4 { text-align: center; }
-	img { margin: 0 1rem; }
 
 	#galleryBack,
 	#galleryForward { top: 50%; }
