--- a/app/less/medium.less
+++ b/app/less/medium.less
@@ -1,5 +1,6 @@
 .media_widget.image,
 .media_widget.youtube { max-width: 660px; }
+.gallery_widget img { margin: 0 1rem; }
 
 #moonlanding { width: 660px; }
 
